--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "react-intl": "^2.1.5",
     "react-markdown": "^2.4.2",
     "react-router": "^2.8.1",
+    "react-router-redux": "4.0.6",
     "rimraf": "^2.5.4",
     "s15e-javascript": "^0.2.4",
     "serialize-javascript": "^1.3.0",
