--- a/package.json
+++ b/package.json
@@ -133,8 +133,11 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "react-intl": "^2.1.5",
     "react-markdown": "^2.4.2",
+    "react-redux": "4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "4.0.6",
+    "redux": "3.6.0",
+    "redux-saga": "0.12.0",
     "rimraf": "^2.5.4",
     "s15e-javascript": "^0.2.4",
     "serialize-javascript": "^1.3.0",
