--- a/package.json
+++ b/package.json
@@ -153,12 +153,13 @@
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.0",
     "webpack-node-externals": "^1.5.4",
+    "eslint-config-airbnb": "12.0.0",
     "webpack-sources": "^0.1.2"
   },
   "devDependencies": {
-    "nsp": "^2.6.2",
-    "source-sans-pro": "^2.0.10",
     "normalize.css": "^5.0.0",
-    "prepublish-lib": "^0.4.1"
+    "nsp": "^2.6.2",
+    "prepublish-lib": "^0.4.1",
+    "source-sans-pro": "^2.0.10"
   }
 }
