--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "cssstats": "^3.0.0-beta.2",
     "dotenv": "^2.0.0",
     "enzyme": "^2.4.1",
-    "eslint": "^3.7.1",
+    "eslint": "3.8.0",
+    "eslint-config-airbnb": "12.0.0",
+    "eslint-plugin-ava": "3.1.1",
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
@@ -153,7 +155,6 @@
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.0",
     "webpack-node-externals": "^1.5.4",
-    "eslint-config-airbnb": "12.0.0",
     "webpack-sources": "^0.1.2"
   },
   "devDependencies": {
