--- a/src/webpack/.eslintrc.yml
+++ b/src/webpack/.eslintrc.yml
@@ -1,5 +1,6 @@
 extends:
-  ./node_modules/s15e-javascript/.eslintrc.yml
+  - ../../node_modules/s15e-javascript/.eslintrc.yml
+  - plugin:ava/recommended
 
 env:
   browser: true
