--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clean": "rimraf build/client/* build/server/* lib/* bin/*",
     "nsp": "nsp check --output summary",
     "test": "npm run prepublish && npm run prod",
+    "lint:js": "eslint --ignore-path .eslintignore src",
     "prescript": "npm run clean && rollup --config rollup.script.cfg",
     "prepublish": "npm run prescript && rimraf lib && prepublish-lib",
     "release": "release-it --github.release --npm.publish --non-interactive",
