add test scripts

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prod:start": "npm run prod && node build/server/main.js",
     "clean": "rimraf build/client/* build/server/* lib/* bin/*",
     "nsp": "nsp check --output summary",
-    "test": "npm run prepublish && npm run prod",
+    "test": "ava \"app/**/*.test.js\" --verbose",
+    "watch:test": "npm run test -- --watch",
     "lint:js": "eslint --ignore-path .eslintignore src",
     "prescript": "npm run clean && rollup --config rollup.script.cfg",
     "prepublish": "npm run prescript && rimraf lib && prepublish-lib",
