--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "helmet": "^2.3.0",
     "hpp": "^0.2.1",
     "html-webpack-plugin": "^2.22.0",
+    "immutable": "3.8.1",
     "intl": "^1.2.5",
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
@@ -156,6 +157,7 @@
     "react-router": "^2.8.1",
     "react-router-redux": "4.0.6",
     "redux": "3.6.0",
+    "redux-immutable": "3.0.8",
     "redux-saga": "0.12.0",
     "rimraf": "^2.5.4",
     "s15e-javascript": "^0.2.4",
