--- a/package.json
+++ b/package.json
@@ -174,11 +174,12 @@
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.0",
     "webpack-node-externals": "^1.5.4",
-    "webpack-sources": "^0.1.2"
-  },
-  "devDependencies": {
+    "webpack-sources": "^0.1.2",
     "babel-polyfill": "6.16.0",
     "babel-register": "6.16.3",
+    "bcryptjs": "2.3.0"
+  },
+  "devDependencies": {
     "normalize.css": "^5.0.0",
     "nsp": "^2.6.2",
     "prepublish-lib": "^0.4.1",
