--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -24,4 +24,12 @@ rules:
   no-process-env:
     - off
   import/imports-first:
-   - off
+    - off
+  import/newline-after-import:
+    - off
+  import/no-extraneous-dependencies:
+    - off
+  import/no-named-as-default:
+    - off
+  import/prefer-default-export:
+    - off
