--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -33,3 +33,21 @@ rules:
     - off
   import/prefer-default-export:
     - off
+  jsx-a11y/aria-props:
+    - error
+  jsx-a11y/heading-has-content:
+    - off
+  jsx-a11y/href-no-hash:
+    - error
+  jsx-a11y/label-has-for:
+    - error
+  jsx-a11y/mouse-events-have-key-events:
+    - error
+  jsx-a11y/role-has-required-aria-props:
+    - error
+  jsx-a11y/no-static-element-interactions:
+    - off
+  jsx-a11y/role-supports-aria-props:
+    - error
+  max-len:
+    - off
