--- a/package.json
+++ b/package.json
@@ -73,11 +73,14 @@
     "babel-plugin-transform-class-properties": "^6.16.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "6.16.0",
     "babel-preset-babili": "0.0.5",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "babel-register": "6.16.3",
     "babel-runtime": "^6.11.6",
     "babili-webpack-plugin": "0.0.5",
+    "bcryptjs": "2.3.0",
     "builtin-modules": "^1.1.1",
     "chalk": "^1.1.3",
     "chokidar": "^1.6.0",
@@ -157,6 +160,7 @@
     "react-router": "^2.8.1",
     "react-router-redux": "4.0.6",
     "redux": "3.6.0",
+    "redux-form": "6.1.1",
     "redux-immutable": "3.0.8",
     "redux-saga": "0.12.0",
     "rimraf": "^2.5.4",
@@ -174,10 +178,7 @@
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.0",
     "webpack-node-externals": "^1.5.4",
-    "webpack-sources": "^0.1.2",
-    "babel-polyfill": "6.16.0",
-    "babel-register": "6.16.3",
-    "bcryptjs": "2.3.0"
+    "webpack-sources": "^0.1.2"
   },
   "devDependencies": {
     "normalize.css": "^5.0.0",
