--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "react-router": "^2.8.1",
     "react-router-redux": "4.0.6",
     "redux": "3.6.0",
+    "redux-actions": "0.12.0",
     "redux-form": "6.1.1",
     "redux-immutable": "3.0.8",
     "redux-saga": "0.12.0",
