--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "redux": "3.6.0",
     "redux-actions": "0.12.0",
     "redux-form": "6.1.1",
+    "redux-form-saga": "0.0.6",
     "redux-immutable": "3.0.8",
     "redux-saga": "0.12.0",
     "rimraf": "^2.5.4",
