--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "intl": "^1.2.5",
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
+    "json-server": "0.8.22",
     "load-plugins": "^2.1.1",
     "loader-utils": "^0.2.16",
     "lodash-es": "^4.16.4",
