--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   },
   "dependencies": {
     "assets-webpack-plugin": "^3.4.0",
-    "async": "^2.1.1",
+    "async": "^2.1.2",
     "autoprefixer": "^6.5.1",
     "ava": "^0.16.0",
     "awesome-typescript-loader": "^2.2.4",
@@ -83,16 +83,16 @@
     "bcryptjs": "2.3.0",
     "builtin-modules": "^1.1.1",
     "chalk": "^1.1.3",
-    "chokidar": "^1.6.0",
+    "chokidar": "^1.6.1",
     "colorguard": "^1.2.0",
     "compression": "^1.6.2",
-    "cross-env": "^3.1.2",
+    "cross-env": "^3.1.3",
     "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
     "cssstats": "^3.0.0-beta.2",
     "dotenv": "^2.0.0",
-    "enzyme": "^2.4.1",
-    "eslint": "3.8.0",
+    "enzyme": "^2.5.1",
+    "eslint": "^3.8.1",
     "eslint-config-airbnb": "12.0.0",
     "eslint-plugin-ava": "3.1.1",
     "eslint-plugin-import": "^2.0.1",
@@ -125,6 +125,7 @@
     "pleeease-filters": "^3.0.0",
     "postcss": "^5.2.4",
     "postcss-advanced-variables": "^1.2.2",
+    "postcss-assets": "^4.1.0",
     "postcss-at-warn": "^1.0.0",
     "postcss-calc": "^5.3.1",
     "postcss-color-function": "^2.0.1",
@@ -137,7 +138,7 @@
     "postcss-gradient-transparency-fix": "^1.0.2",
     "postcss-hexrgba": "^0.2.1",
     "postcss-input-style": "^0.3.0",
-    "postcss-loader": "^0.13.0",
+    "postcss-loader": "^1.0.0",
     "postcss-media-minmax": "^2.1.2",
     "postcss-nested": "^1.0.0",
     "postcss-pseudo-class-any-link": "^1.0.0",
@@ -146,7 +147,8 @@
     "postcss-responsive-type": "^0.4.0",
     "postcss-sassy-mixins": "^2.0.0",
     "postcss-selector-matches": "^2.0.5",
-    "postcss-smart-import": "^0.3.2",
+    "postcss-simple-url": "^0.1.3",
+    "postcss-smart-import": "^0.4.3",
     "postcss-url": "^5.1.2",
     "postcss-will-change": "^1.1.0",
     "postcss-zindex": "^2.1.1",
@@ -171,7 +173,7 @@
     "serialize-javascript": "^1.3.0",
     "shrink-ray": "^0.1.3",
     "sinon": "^1.17.6",
-    "source-map-support": "^0.4.3",
+    "source-map-support": "^0.4.5",
     "style-loader": "^0.13.1",
     "stylefmt": "^4.3.1",
     "stylelint": "^7.4.2",
@@ -184,9 +186,9 @@
     "webpack-sources": "^0.1.2"
   },
   "devDependencies": {
-    "normalize.css": "^5.0.0",
     "nsp": "^2.6.2",
-    "prepublish-lib": "^0.4.1",
-    "source-sans-pro": "^2.0.10"
+    "source-sans-pro": "^2.0.10",
+    "normalize.css": "^5.0.0",
+    "prepublish-lib": "^0.5.1"
   }
 }
