--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "helmet": "^2.3.0",
     "hpp": "^0.2.1",
     "html-webpack-plugin": "^2.22.0",
+    "http-proxy": "1.15.1",
     "immutable": "3.8.1",
     "intl": "^1.2.5",
     "isomorphic-fetch": "^2.2.1",
