--- a/.env_example
+++ b/.env_example
@@ -10,6 +10,10 @@
 # The port on which to run our server.
 SERVER_PORT=1337
 
+# Proxy server.
+PROXY_SERVER_PORT=8888
+PROXY_SERVER_ROOT=http://localhost:8888
+
 # The port on which to run our client bundle dev server.
 CLIENT_DEVSERVER_PORT=7331
 
