--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "babel-runtime": "^6.11.6",
     "babili-webpack-plugin": "0.0.5",
     "bcryptjs": "2.3.0",
+    "body-parser": "1.15.2",
     "builtin-modules": "^1.1.1",
     "chalk": "^1.1.3",
     "chokidar": "^1.6.1",
