--- a/package.json
+++ b/package.json
@@ -162,7 +162,7 @@
     "react-intl": "^2.1.5",
     "react-markdown": "^2.4.2",
     "react-redux": "4.4.5",
-    "react-router": "^2.8.1",
+    "react-router": "4.0.0-alpha.5",
     "react-router-redux": "4.0.6",
     "redux": "3.6.0",
     "redux-form": "6.1.1",
