--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prod:start": "npm run prod && node build/server/main.js",
     "clean": "rimraf build/client/* build/server/* lib/* bin/*",
     "nsp": "nsp check --output summary",
-    "test": "ava \"app/**/*.test.js\" --verbose",
+    "test": "ava \"src/**/*.test.js\" --verbose --watch",
     "coverage": "nyc npm run test",
     "watch:test": "npm run test -- --watch",
     "lint": "npm run lint:js",
@@ -58,7 +58,14 @@
   "ava": {
     "require": [
       "./setup-test-env.js"
-    ]
+    ],
+    "babel": {
+      "presets": [
+        "es2015",
+        "latest",
+        "react"
+      ]
+    }
   },
   "dependencies": {
     "assets-webpack-plugin": "^3.4.0",
@@ -113,6 +120,7 @@
     "immutable": "3.8.1",
     "intl": "^1.2.5",
     "isomorphic-fetch": "^2.2.1",
+    "jsdom": "9.8.0",
     "json-loader": "^0.5.4",
     "json-server": "0.8.22",
     "load-plugins": "^2.1.1",
