--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     }
   },
   "dependencies": {
-    "assets-webpack-plugin": "^3.4.0",
+    "assets-webpack-plugin": "^3.5.0",
     "async": "^2.1.2",
     "autoprefixer": "^6.5.1",
     "ava": "^0.16.0",
@@ -115,7 +115,7 @@
     "gzip-size": "^3.0.0",
     "helmet": "^2.3.0",
     "hpp": "^0.2.1",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^2.24.0",
     "http-proxy": "1.15.1",
     "immutable": "3.8.1",
     "intl": "^1.2.5",
@@ -133,7 +133,7 @@
     "nyc": "8.3.1",
     "path": "^0.12.7",
     "pleeease-filters": "^3.0.0",
-    "postcss": "^5.2.4",
+    "postcss": "^5.2.5",
     "postcss-advanced-variables": "^1.2.2",
     "postcss-assets": "^4.1.0",
     "postcss-at-warn": "^1.0.0",
@@ -164,6 +164,7 @@
     "postcss-zindex": "^2.1.1",
     "progress-bar-webpack-plugin": "^1.9.0",
     "react": "^15.3.2",
+    "react-addons-test-utils": "15.3.2",
     "react-dom": "^15.3.2",
     "react-helmet": "^3.1.0",
     "react-hot-loader": "^3.0.0-beta.6",
@@ -185,8 +186,8 @@
     "source-map-support": "^0.4.5",
     "style-loader": "^0.13.1",
     "stylefmt": "^4.3.1",
-    "stylelint": "^7.4.2",
-    "stylelint-config-standard": "^13.0.2",
+    "stylelint": "^7.5.0",
+    "stylelint-config-standard": "^14.0.0",
     "webpack": "^2.1.0-beta.21",
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-middleware": "^1.8.4",
