--- a/package.json
+++ b/package.json
@@ -60,13 +60,7 @@
       "./setup-test-env.js"
     ],
     "verbose": true,
-    "babel": {
-      "presets": [
-        "latest",
-        "react",
-        "stage-0"
-      ]
-    }
+    "babel": "inherit"
   },
   "dependencies": {
     "assets-webpack-plugin": "^3.5.0",
