Handle css module in testing env

--- a/package.json
+++ b/package.json
@@ -192,9 +192,10 @@
     "webpack-sources": "^0.1.2"
   },
   "devDependencies": {
-    "nsp": "^2.6.2",
-    "source-sans-pro": "^2.0.10",
+    "mock-css-modules": "1.0.0",
     "normalize.css": "^5.0.0",
-    "prepublish-lib": "^0.5.1"
+    "nsp": "^2.6.2",
+    "prepublish-lib": "^0.5.1",
+    "source-sans-pro": "^2.0.10"
   }
 }
