--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,6 +2,7 @@ extends:
   - airbnb
   - plugin:ava/recommended
 
+parser: babel-eslint
 env:
   browser: true
   es6: true
@@ -15,6 +16,8 @@ parserOptions:
 root: true
 
 rules:
+  strict:
+    - off
   no-console:
     - off
   semi:
