--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prod:start": "npm run prod && node build/server/main.js",
     "clean": "rimraf build/client/* build/server/* lib/* bin/*",
     "nsp": "nsp check --output summary",
-    "test": "ava",
+    "test": "cross-env NODE_PATH=src ava",
     "coverage": "nyc npm run test",
     "watch:test": "npm run test -- --watch",
     "lint": "npm run lint:js",
@@ -94,7 +94,7 @@
     "chokidar": "^1.6.1",
     "colorguard": "^1.2.0",
     "compression": "^1.6.2",
-    "cross-env": "^3.1.3",
+    "cross-env": "3.1.3",
     "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
     "cssstats": "^3.0.0-beta.2",
