--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clean": "rimraf build/client/* build/server/* lib/* bin/*",
     "nsp": "nsp check --output summary",
     "test": "cross-env NODE_PATH=src ava",
+    "test:watch": "cross-env NODE_PATH=src ava --watch",
     "coverage": "nyc npm run test",
     "watch:test": "npm run test -- --watch",
     "lint": "npm run lint:js",
@@ -62,7 +63,7 @@
     "verbose": true,
     "babel": "inherit",
     "files": [
-      "src/**/*.test.js"
+      "test/**/*.test.js"
     ]
   },
   "dependencies": {
@@ -102,6 +103,7 @@
     "enzyme": "^2.5.1",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "12.0.0",
+    "eslint-import-resolver-node": "0.2.3",
     "eslint-plugin-ava": "3.1.1",
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.3",
