--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "gzip-size": "^3.0.0",
     "helmet": "^2.3.0",
     "hpp": "^0.2.1",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.0",
     "http-proxy": "1.15.1",
     "immutable": "3.8.1",
