--- a/rollup.script.cfg
+++ b/rollup.script.cfg
@@ -1,17 +1,17 @@
-import buble from "rollup-plugin-buble"
-import json from "rollup-plugin-json"
-import builtinModules from "builtin-modules"
+import buble from 'rollup-plugin-buble'
+import json from 'rollup-plugin-json'
+import builtinModules from 'builtin-modules'
 
 var pkg = require('./package.json')
 var external = Object.keys(pkg.dependencies).concat(builtinModules)
 
 export default {
-  entry: "src/script.js",
-  dest: "bin/advanced-script.js",
-  format: "cjs",
+  entry: 'src/script.js',
+  dest: 'bin/kitty-script.js',
+  format: 'cjs',
   sourceMap: true,
   external: external,
-  banner: "#!/usr/bin/env node\n",
+  banner: '#!/usr/bin/env node\n',
   plugins: [
     json(),
     buble()
