Tell rollup not to bundle in all deps and depDeps listing in package.json

--- a/rollup.script.cfg
+++ b/rollup.script.cfg
@@ -3,7 +3,9 @@ import json from 'rollup-plugin-json'
 import builtinModules from 'builtin-modules'
 
 var pkg = require('./package.json')
-var external = Object.keys(pkg.dependencies).concat(builtinModules)
+var deps = Object.keys(pkg.dependencies)
+var devDeps = Object.keys(pkg.devDependencies)
+var external = deps.concat(devDeps).concat(builtinModules)
 
 export default {
   entry: 'src/script.js',
