Update rollup entry

--- a/rollup.script.cfg
+++ b/rollup.script.cfg
@@ -8,7 +8,7 @@ var devDeps = Object.keys(pkg.devDependencies)
 var external = deps.concat(devDeps).concat(builtinModules)
 
 export default {
-  entry: 'src/script.js',
+  entry: './start.script.js',
   dest: 'bin/kitty-script.js',
   format: 'cjs',
   sourceMap: true,
