--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     ]
   },
   "dependencies": {
+    "classnames": "2.2.5",
     "immutable": "3.8.1",
     "intl": "^1.2.5",
     "isomorphic-fetch": "^2.2.1",
@@ -78,7 +79,6 @@
     "react-dom": "^15.3.2",
     "react-helmet": "^3.1.0",
     "react-intl": "^2.1.5",
-    "react-markdown": "^2.4.2",
     "react-redux": "4.4.5",
     "react-router": "4.0.0-alpha.5",
     "react-router-redux": "4.0.6",
