--- a/package.json
+++ b/package.json
@@ -12,20 +12,19 @@
     "kitty-script": "./bin/kitty-script.js"
   },
   "scripts": {
-    "start": "npm run prescript && webpack-dashboard -- node bin/kitty-script.js start",
-    "just-build": "npm run prescript && node bin/kitty-script.js build",
+    "start": "npm run rollup:build && webpack-dashboard -- node bin/kitty-script.js start",
+    "just-build": "npm run rollup:build && node bin/kitty-script.js build",
     "build": "npm run just-build && node build/server/main.js",
     "clean": "rimraf build/client/* build/server/* lib/* bin/*",
     "nsp": "nsp check --output summary",
     "test": "cross-env NODE_PATH=src ava",
-    "start:plain": "npm run prescript && node bin/kitty-script.js start",
+    "start:plain": "npm run rollup:build && node bin/kitty-script.js start",
     "test:watch": "cross-env ava --watch",
     "coverage": "nyc npm run test",
     "watch:test": "npm run test -- --watch",
     "lint": "npm run lint:js",
     "lint:js": "eslint --ignore-path .eslintignore src",
-    "prescript": "npm run clean && rollup --config rollup.script.cfg",
-    "prepublish": "npm run prescript && rimraf lib && prepublish-lib",
+    "rollup:build": "npm run clean && rollup --config rollup.script.cfg",
     "release": "release-it --github.release --npm.publish --non-interactive",
     "release:minor": "release-it --github.release --npm.publish --non-interactive --increment minor",
     "release:major": "release-it --github.release --npm.publish --non-interactive --increment major"
